# vlsi

./: .gitignore  compile_typst.bat  subt_sram.drawio
assignment_1/presentation/: main.typ  preamble.typ
assignment_1/report/: lib.typ  main.typ  refs.bib
assignment_2/genus/: synthesis.tcl
assignment_2/genus/outputs/: izhikevich_netlist.v  izhikevich_sdc.sdc  izhikevich_sdf.sdf
assignment_2/genus/reports/: report_area.rpt  report_power.rpt  report_qor.rpt  report_timing.rpt
assignment_2/src/: Zybo-Z7-Master.xdc  izhikevich.vhd  tb_izhikevich.vhd  tb_zybo.vhd  top.vhd  top_module.vhd
notebooks/: assignment_1.ipynb  assignment_2.ipynb  ex_mobility_degredation.ipynb  ex_subthreshold_slope.ipynb  pyproject.toml
notebooks/ass1_data/: ass1_sram_tran.csv  wm_float.csv  wm_nofloat.csv
notebooks/ass2_data/: CH_sim.csv  FS.csv  FS_sim.csv  RS.csv  RS_sim.csv
notebooks/data/: ass1_sram_butterfly.csv  ex_subthreshold_slope.csv
vivado/: .keep
