[tool.poetry]
name = "vlsi"
version = "0.1.0"
description = ""
authors = ["andreasp <andreas@pedersenmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
sympy = "^1.13.3"
scipy = "^1.14.1"
jupyterlab = "^4.2.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
